--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
     "extends": "./config/tsconfig.base.json",
     "compilerOptions": {
-        "watch": true,
+        "watch": false,
         "sourceMap": true
     }
 }
